OldArchive/43cf3ec5b824ce770f2a75735e20998c-8dcf59174449f11e872bc3faded12b76/output
+ g++-4.8 -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:12:18: error: ‘put_time’ is not a member of ‘std’
     std::cout << std::put_time( std::localtime( &t ), "%x" ) << std::endl;
                  ^
